device token db insert method added. retrofit package added.

--- a/FirebaseCloudMessaging/app/src/main/res/values/strings.xml
+++ b/FirebaseCloudMessaging/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Firebase-Cloud-Messaging</string>
+    <string name="app_name">Firebase Cloud Messaging</string>
+    <string name="DBNODE_DeviceTokens">DeviceTokensssss</string>
 </resources>
